--- a/src/main/resources/templates/thymeleaf/index.html
+++ b/src/main/resources/templates/thymeleaf/index.html
@@ -23,7 +23,7 @@
 					<div class="swiper mySwiper">
 						<div class="swiper-wrapper">
 							<div class="swiper-slide">
-								<img src="resources/img/beta_babber-1.jpg" />
+								<img src="resources/img/beta_babber-1.jpg"/>
 							</div>
 							<div class="swiper-slide">
 								<img src="resources/img/banner-1.jpg" />
@@ -523,6 +523,7 @@
 	
 	  var myArray = ["01","02","03","04","05","06","07","08","09"];
 	  var swiper = new Swiper(".mySwiper", {
+		  autoHeight: false,
 		  autoplay: {
 	          delay: 3000,
 	          disableOnInteraction: false,
