--- a/src/main/resources/templates/thymeleaf/header.html
+++ b/src/main/resources/templates/thymeleaf/header.html
@@ -13,7 +13,7 @@
 	<meta name="description" content="">
 	<meta name="author" content="">
 	<title>딜링아트</title>
-	<link type="text/css" rel="stylesheet" href="resources/css/bootstrap-select.css">
+	<link type="text/css" rel="stylesheet" href="resources/css/bootstrap-select.min.css">
 	<link type="text/css" rel="stylesheet" href="resources/css/font.css" />
 	<link type="text/css" rel="stylesheet" href="resources/css/swiper-bundle.min.css" />
 	<link type="text/css" rel="stylesheet" href="resources/css/bootstrap.min.css">
@@ -32,7 +32,8 @@
     <script type="text/javascript" src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script type="text/javascript" src="resources/js/common.js"></script>
     <script type="text/javascript" src="resources/js/jquery-ui.min.js"></script>
-    <script type="text/javascript" src="resources/js/bootstrap-select.js"></script>
+    <script type="text/javascript" src="resources/js/bootstrap-select.min.js"></script>
+    <script type="text/javascript" src="resources/js/defaults-ko_KR.min.js"></script>
     
     <style type="text/css">
 		.modal-open {
