--- a/src/main/resources/static/css/ui_pc.css
+++ b/src/main/resources/static/css/ui_pc.css
@@ -5015,3 +5015,12 @@ position: relative;background-color: #fbfbfb;}
 .bg-st .btn-group button{background-color:#fff;}
 .comy-sum{text-align: right;width: 480px;margin-top: 23px;font-size: 16px; font-weight: 600; color: #9f9f9f;vertical-align: middle;}
 .comy-sum span{padding-left: 19px;font-size: 26px; color: #000000; vertical-align: middle;font-weight: 600;}
+
+
+/* 0516 */
+.btn-mw{margin:0 auto !important;max-width: 300px;}
+.th-w170 th{width:170px;}
+
+
+/* 0518 */
+.link-text{width:38px;}
