--- a/src/main/resources/templates/thymeleaf/fo/myPage/portfolio_myWork.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/portfolio_myWork.html
@@ -23,12 +23,12 @@
 						<div class="reds-box mg_t150 por">
 							<ul class="pc-on">
 								<li>
-									<a href="#" class="up-on">
+									<a href="javascript:fnModalAlert();" class="up-on">
 										최신 순
 									</a>
 								</li>
 								<li>
-									<a href="#" class="down-on">
+									<a href="javascript:fnModalAlert();" class="down-on">
 										가격
 									</a>
 								</li>
@@ -123,12 +123,17 @@ function myWorkList(){
 	     					html += '<div class="item-ho">';
 	     					
 	     					html += '			<p>'+ result[i].dealStrtDate +' - '+ result[i].dealEndngDate +'</p>';
-		     				html += '			<p> 응찰수 : '+ result[i].bidCnt +'</p>';
-		     				html + '				<ul><li>'+ result[i].dealRemainingDay +'<span>day</span></li>';
-		     				html += '				<li>'+ result[i].dealRemainingHour +'<span>hrs</span></li>';
-		     				html += '				<li>'+ result[i].dealRemainingMin +'<span>min</span></li>';
-		     				html += '				<li>'+ result[i].dealRemainingSec +'<span>sec</span></li></ul>';
-		     				html += '				<h4>시작가 : '+ result[i].dealStrtPrc +'</h4>';
+	     					if(result[i].maxBidPrc == null) {
+	     						html += '			<h4>입찰가 '+ formatComma(result[i].dealStrtPrc) +'</h4>';
+	     					} else {
+	     						html += '			<h4>입찰가 '+ formatComma(result[i].maxBidPrc) +'</h4>';	
+	     					}
+	     					
+	     					html += '			<p class="ts-2">';
+	     					html += '			'+ result[i].dealStrtDate +' – '+ result[i].dealEndngDate +'<br/>';
+	     					html += '			응찰수 : '+ result[i].bidCnt +'<br/>';
+	     					html += '			'+ result[i].dealRemainingDay +'일 '+ result[i].dealRemainingHour +'시 '+ result[i].dealRemainingMin +'분 '+ result[i].dealRemainingSec +'초';
+	     					html += '			</p>';
 	     					
 	     					html += '</div>';
 	     					
@@ -289,9 +294,14 @@ function myWorkList(){
 	     					html += '<div class="item-div-img reg">';
 	     					//작품 이미지
 	     					html += '<img src="'+ result[i].workMainImgUrl +'" class="pseudo-img" width="360px;">';
+	     					html += '	<div class="item-ho3 reg-div">';
+	     					html += '		<div class="regs" >';
+	     					html += '			<a href="#" class="reg-a" workSq="'+ result[i].workSq +'"><span>거래 등록</span></a>';
+	     					html += '			<a href="#" class="cor-a" workSq="'+ result[i].workSq +'"><span>작품 수정</span></a>';
+	     					html += '		</div>';
+	     					html += '	</div>';
 	     					html += '</div>';
 	     					html += '<div class="item-body">';
-	     					html += '<div class="heartsoldout" workSq="'+ result[i].workSq +'" style="cursor:pointer;"></div>';
 	     					html += '<div>';
 	     					html += '<div class="uesr-s">';
 	     					if(result[i].artstProfileImgUrl == null || result[i].artstProfileImgUrl == ""){
