경매 응찰하기 개발 완료

--- a/src/main/resources/templates/thymeleaf/fo/deal/deal.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/deal.html
@@ -930,13 +930,7 @@
 	});
     
 	function workDetail(workSq){
-		pageGoPost({
-			url:"/bidding",
-			target:"_self",
-			vals:[
-				["workSq", workSq]
-			]
-		});
+		window.location.href = "/bidding?workSq="+workSq;
 	}
 	
 	
