--- a/src/main/resources/templates/thymeleaf/fo/deal/bidding.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/bidding.html
@@ -402,8 +402,10 @@ var workGrtUrl = new Image();
 workGrtUrl.src = result.deal.workGrtUrl;
 $(function() {
 	$("#sbx_bidPrc").selectpicker("refresh");
-	if(result.deal.bidMbrSq == sMbrSqVal){
-		$(".ba-btn1").append('<div class="tootip-3">현재 가장 높은 응찰자 입니다 </div>').trigger("create");
+	if(sMbrSqVal != null && sMbrSqVal != ""){
+		if(result.deal.bidMbrSq == sMbrSqVal){
+			$(".ba-btn1").append('<div class="tootip-3">현재 가장 높은 응찰자 입니다 </div>').trigger("create");
+		}
 	}
 	if(result.deal.artstSq == null || result.deal.artstSq == ""){
 		$("#artstInfo").css("display", "none");
@@ -437,10 +439,48 @@ setInterval(function() {
 }, 1000);
 
 function btn_purchaseOrBid_onclick(){
-	if($("#btn_purchaseOrBid").text() == "구매하기"){
-		location.href="/myDealDetailBuy?dealSq="+result.deal.dealSq+"&&mbrSq="+sMbrSqVal;
+	if(sMbrSqVal == "" || sMbrSqVal == null){
+		modalConfirm("알림", "로그인 후 응찰할 수 있습니다.<br>화인 버튼을 누르시면 로그인 페이지로 이동합니다.", function(confrim){
+			if(confrim){
+				$("#loginModal").modal("show");	
+			}
+		});
 	}else{
-		
+		if($("#btn_purchaseOrBid").text() == "구매하기"){
+			location.href="/myDealDetailBuy?dealSq="+result.deal.dealSq+"&&mbrSq="+sMbrSqVal;
+		}else{
+			if($("#sbx_bidPrc").val() != "null"){
+				$.ajax({
+			        type: "post",
+			        url: "/bidReg",
+			        data : {
+			        	dealSq : result.deal.dealSq,
+			        	mbrSq : sMbrSqVal,
+			        	bidPrc : parseInt($("#sbx_bidPrc").val().replaceAll(/,/g, ''))
+			        }, 
+			        success: function(data) {
+			        	debugger;
+			        	if(data.result == -1){
+				        	modalAlertShow("실시간 응찰가보다 낮습니다. 응찰 금액을 다시 입력해주세요.", "reload");
+			        	}
+			        	if(data.result == 2){
+			        		modalConfirm("알림", "응찰이 완료되었습니다.<br>거래내역 페이지로 이동하시겠습니까?", function(confrim){
+								if(confrim){
+									location.href = "/myDeal";
+								}else{
+									location.reload();
+								}
+							});
+			        	}
+			        },
+			        error: function(error) {
+			            alert("오류 발생" + error);
+			        }
+				});		
+			}else{
+				modalAlertShow("응찰가가 입력되지 않았습니다.", "sbx_bidPrc");
+			}
+		}
 	}
 }
 //보증서 보기 팝업 호출
@@ -506,6 +546,8 @@ function selectBoxWriteAskingPrice(){
 	}
 	$("#sbx_bidPrc").selectpicker("refresh");
 }
+
+
  $(window).on("resize", function () {
     if(window.matchMedia('(min-width: 1537px)').matches)
     {
